--- a/src/App.css
+++ b/src/App.css
@@ -6,6 +6,7 @@
   width: 100%;
   margin: 0;
   padding: 0;
+  background-color: #f3f3f2;
 }
 
 .portfolio-container,
@@ -17,8 +18,7 @@
   align-items: center;
   justify-content: center;
   flex-direction: row;
-  box-sizing: border-box;
-  background-color: #f3f3f2;
+  box-sizing: border-box
 }
 
 .about-me-container{
@@ -66,19 +66,23 @@
   border-radius: 150px 20px 30px 150px;
 }
 
+.about-image{
+  border-radius: 0px 300px 0px 150px;
+}
+
 .about-me-container {
-  background-color: #c7d7cf; /* Light grey background for the second section */
+  background-color: #c7d7cf; 
 }
 
 .skills-container {
-  background-color: #f3f3f2; /* White background for the third section */
+  background-color: #f3f3f2; 
   text-align: center;
   flex-direction: column;
 }
 
 .skills-grid {
   display: grid;
-  grid-template-columns: repeat(5, 1fr); /* 5 columns */
+  grid-template-columns: repeat(5, 1fr); 
   gap: 20px;
   margin-top: 20px;
   width: 100%;
@@ -86,8 +90,8 @@
 }
 
 .skill-box {
-  background-color: #c7d7cf; /* Light grey background for skill boxes */
-  color: #333; /* Dark text color */
+  background-color: #c7d7cf; 
+  color: #333; 
   padding: 20px;
   border-radius: 10px;
   font-weight: bold;
@@ -96,7 +100,7 @@
 }
 
 .contact-container {
-  background-color: #c7d7cf; /* Light grey background for contact section */
+  background-color: #c7d7cf; 
   text-align: center;
   padding: 60px 20px;
 }
@@ -108,20 +112,37 @@
 .contact-icons {
   display: flex;
   justify-content: center;
-  gap: 30px; /* Increase space between icons */
+  gap: 30px; 
   margin-top: 10px;
 }
 
 .contact-icon {
-  color: #333; /* Dark text color for icons */
-  font-size: 30px; /* Adjust icon size */
+  color: #333; 
+  font-size: 30px; 
   text-decoration: none;
-  transition: color 0.3s ease; /* Smooth color transition */
+  transition: color 0.3s ease; 
 }
 
 .contact-icon:hover {
-  color: #585c58; /* Change color on hover */
+  color: #585c58; 
 }
+
+.download-resume-btn {
+  display: inline-block;
+  margin-top: 15px;
+  padding: 10px 20px;
+  background-color: #000; 
+  color: #fff;
+  text-decoration: none;
+  font-weight: bold;
+  border-radius: 5px;
+  transition: background-color 0.3s;
+}
+
+.download-resume-btn:hover {
+  background-color: #444; 
+}
+
 
 /* Adjust margin for larger screens */
 @media (min-width: 768px) {
@@ -150,6 +171,6 @@
 
 @media (min-width: 1920px) {
   .text-section {
-    margin-left: 300px; /* Matches the previous hardcoded value */
+    margin-left: 300px; 
   }
 }
